--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "pug-load": "^2.0.3"
   },
   "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-env": "^1.1.6",
+    "css-loader": "^0.26.1",
+    "style-loader": "^0.13.1",
     "webpack": "^2.2.0-rc.0"
   }
 }
