--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "build": "webpack"
+    "build": "webpack --progress --colors --watch",
+    "build:pro": "NODE_ENV=production webpack -p",
+    "serve": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -25,16 +27,25 @@
   "homepage": "https://github.com/asommer70/mirror-pila#readme",
   "dependencies": {
     "express": "^4.14.0",
+    "moment": "^2.17.1",
     "pug": "2.0.0-alpha6",
-    "pug-load": "^2.0.3"
+    "pug-load": "^2.0.3",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-env": "^1.1.6",
+    "babel-preset-react": "^6.16.0",
     "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "git+https://github.com/webpack/extract-text-webpack-plugin.git",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "file-loader": "^0.9.0",
+    "image-webpack-loader": "^3.1.0",
     "style-loader": "^0.13.1",
-    "webpack": "^2.2.0-rc.0"
+    "url-loader": "^0.5.7",
+    "webpack": "^2.2.0-rc.0",
+    "webpack-dev-middleware": "^1.9.0",
+    "webpack-dev-server": "^2.2.0-rc.0"
   }
 }
