--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/asommer70/mirror-pila#readme",
   "dependencies": {
+    "axios": "^0.15.3",
     "express": "^4.14.0",
     "moment": "^2.17.1",
     "pug": "2.0.0-alpha6",
