--- a/motion-sensor/wakey.service
+++ b/motion-sensor/wakey.service
@@ -4,7 +4,8 @@ After=multi-user.target
 
 [Service]
 Type=idle
-ExecStart=/usr/bin/python /usr/local/bin/wakey.py
+ExecStart=/usr/local/bin/wakey
+User=adam
 
 [Install]
 WantedBy=multi-user.target
